--- a/src/app/neobrutalism-dynamical-heterogeneity.css
+++ b/src/app/neobrutalism-dynamical-heterogeneity.css
@@ -136,7 +136,7 @@
     width: 1rem;
 }
 
-/* --- NEW: Styles for Market App Card --- */
+/* --- styles for market app card --- */
 
 .market-font {
     font-family: 'Press Start 2P', cursive;
